--- a/image-gallery.html
+++ b/image-gallery.html
@@ -12,8 +12,8 @@
       }
 
       iron-image {
-        height: 32vw;
-        width: 32vw;
+        height: calc((100vw / 3) - 9px);
+        width: calc((100vw / 3) - 9px);
       }
     </style>
 
