--- a/image-gallery.html
+++ b/image-gallery.html
@@ -1,6 +1,7 @@
 <link rel='import' href='/bower_components/polymer/polymer.html'>
 
 <link rel='import' href='/bower_components/iron-image/iron-image.html'>
+<link rel='import' href='/bower_components/iron-pages/iron-pages.html'>
 
 <dom-module id='image-gallery'>
   <template>
@@ -8,18 +9,57 @@
       :host {
         display: block;
         margin: 0px;
+      }
+
+      iron-pages {
+        height: 100%;
+        width: 100%;
+      }
+
+      iron-pages > section {
         padding: 8px;
       }
 
       iron-image {
-        height: calc((100vw / 3) - 9px);
-        width: calc((100vw / 3) - 9px);
+        height: calc(100vw - 11px);
+        width: calc(100vw - 11px);
+      }
+
+      @media (min-width: 300px) {
+        iron-image {
+          height: calc((100vw / 2) - 11px);
+          width: calc((100vw / 2) - 11px);
+        }
+      }
+
+      @media (min-width: 500px) {
+        iron-image {
+          height: calc((100vw / 3) - 9px);
+          width: calc((100vw / 3) - 9px);
+        }
+      }
+
+      @media (min-width: 700px) {
+        iron-image {
+          height: calc((100vw / 4) - 9px);
+          width: calc((100vw / 4) - 9px);
+        }
+      }
+
+      #view {
+        height: 100vh;
+        width: 100vw;
       }
     </style>
 
-    <template is='dom-repeat' items='[[images]]' index-as='index'>
-      <iron-image src='[[item]]' preload fade sizing='cover' on-tap='_tap'></iron-image>
-    </template>
+    <iron-pages selected='{{_mode}}' attr-for-selected='mode'>
+      <section mode='grid'>
+        <template is='dom-repeat' items='[[images]]' index-as='index'>
+          <iron-image src='[[item]]' preload fade sizing='cover' on-tap='_tap'></iron-image>
+        </template>
+      </section>
+      <iron-image id='view' mode='image' src='' preload fade sizing='contain'></iron-image>
+    </iron-pages>
 
   </template>
   <script>
@@ -27,14 +67,59 @@
       is: 'image-gallery',
 
       properties: {
+        _mode: {
+          type: String,
+          value: 'grid'
+        },
         images: {
           type: Array,
           value: function() { return []; }
+        },
+        selected: {
+          type: Number,
+          value: -1,
+          notify: true
+        },
+        wrap: {
+          type: Boolean,
+          value: false
         }
       },
 
       _tap: function(e, detail) {
         this.fire('image-selected', {index: e.model.index, item: e.model.item});
+        this.show(e.model.index);
+      },
+
+      back: function() {
+        this.selected = -1;
+        this._mode = 'grid';
+      },
+
+      next: function() {
+        if (this.selected >= 0 &&
+          (this.wrap || this.selected < this.images.length - 1)) {
+          return this.show(this.selected === this.images.length - 1 ? 0 : this.selected + 1);
+        }
+        return false;
+      },
+
+      previous: function() {
+        if (this.selected < this.images.length &&
+          (this.wrap || this.selected > 0)) {
+          return this.show(this.selected === 0 ? this.images.length - 1 : this.selected - 1);
+        }
+        return false;
+      },
+
+      show: function(index) {
+        if (index >= 0 && index < this.images.length) {
+          this.selected = index;
+          this.$.view.src = this.images[index];
+          this._mode = 'image';
+          return true;
+        }
+        return false;
       }
     });
   </script>
