--- a/image-gallery.html
+++ b/image-gallery.html
@@ -16,7 +16,7 @@
         width: 100%;
       }
 
-      iron-pages > section {
+      iron-pages > section.pad {
         padding: 8px;
       }
 
@@ -50,15 +50,34 @@
         height: 100vh;
         width: 100vw;
       }
+
+      div.next {
+        position: absolute;
+        height: 100vh;
+        width: 25vw;
+        right: 0vw;
+        z-index: 1;
+      }
+
+      div.previous {
+        position: absolute;
+        height: 100vh;
+        width: 25vw;
+        z-index: 1;
+      }
     </style>
 
     <iron-pages selected='{{_mode}}' attr-for-selected='mode'>
-      <section mode='grid'>
+      <section class='pad' mode='grid'>
         <template is='dom-repeat' items='[[images]]' index-as='index'>
           <iron-image src='[[item]]' preload fade sizing='cover' on-tap='_tap'></iron-image>
         </template>
       </section>
-      <iron-image id='view' mode='image' src='' preload fade sizing='contain'></iron-image>
+      <section mode='image'>
+        <div class='previous' hidden$='[[_hidePrevious]]' on-tap='previous'></div>
+        <div class='next' hidden$='[[_hideNext]]' on-tap='next'></div>
+        <iron-image id='view' src='' preload fade sizing='contain'></iron-image>
+      </section>
     </iron-pages>
 
   </template>
@@ -67,6 +86,14 @@
       is: 'image-gallery',
 
       properties: {
+        _hideNext: {
+          type: Boolean,
+          computed: '_computeHideNext(wrap, selected)'
+        },
+        _hidePrevious: {
+          type: Boolean,
+          computed: '_computeHidePrevious(wrap, selected)'
+        },
         _mode: {
           type: String,
           value: 'grid'
@@ -84,6 +111,14 @@
           type: Boolean,
           value: false
         }
+      },
+
+      _computeHideNext: function(wrap, selected) {
+        return (!wrap && (selected === (this.images.length - 1)));
+      },
+
+      _computeHidePrevious: function(wrap, selected) {
+        return (!wrap && (selected === 0));
       },
 
       _tap: function(e, detail) {
