--- a/image-gallery.html
+++ b/image-gallery.html
@@ -1,9 +1,11 @@
 <link rel='import' href='/bower_components/polymer/polymer.html'>
 
 <link rel='import' href='/bower_components/iron-icons/image-icons.html'>
+<link rel='import' href='/bower_components/iron-icons/iron-icons.html'>
 <link rel='import' href='/bower_components/iron-image/iron-image.html'>
 <link rel='import' href='/bower_components/iron-pages/iron-pages.html'>
 <link rel='import' href='/bower_components/paper-fab/paper-fab.html'>
+<link rel='import' href='/bower_components/paper-icon-button/paper-icon-button.html'>
 
 <dom-module id='image-gallery'>
   <template>
@@ -76,6 +78,15 @@
       div > paper-fab {
         margin: 0px 10px;
       }
+
+      paper-icon-button {
+        color: rgba(0, 0, 0, 0.38);;
+
+        position: absolute;
+        right: 5px;
+        top: 5px;
+        z-index: 2;
+      }
     </style>
 
     <iron-pages selected='{{_mode}}' attr-for-selected='mode'>
@@ -85,6 +96,7 @@
         </template>
       </section>
       <section mode='image'>
+        <paper-icon-button icon='close' on-tap='back'></paper-icon-button>
         <div class='previous' hidden$='[[_hidePrevious]]' on-tap='_divPrevious'>
           <paper-fab hidden$='[[!showImageNav]]' icon='image:navigate-before' on-tap='previous'></paper-fab>
         </div>
