getting rid of extra semi-colon

--- a/image-gallery.html
+++ b/image-gallery.html
@@ -80,7 +80,7 @@
       }
 
       paper-icon-button {
-        color: rgba(0, 0, 0, 0.38);;
+        color: rgba(0, 0, 0, 0.38);
 
         position: absolute;
         right: 5px;
