switching close icon to be optional

--- a/image-gallery.html
+++ b/image-gallery.html
@@ -97,7 +97,7 @@
         </template>
       </section>
       <section mode='image'>
-        <paper-icon-button icon='close' on-tap='back'></paper-icon-button>
+        <paper-icon-button hidden$='[[!showCloseImage]]' icon='close' on-tap='back'></paper-icon-button>
         <div class='previous' hidden$='[[_hidePrevious]]' on-tap='_divPrevious'>
           <paper-fab hidden$='[[!showImageNav]]' icon='image:navigate-before' on-tap='previous'></paper-fab>
         </div>
@@ -134,6 +134,11 @@
           type: Number,
           value: -1,
           notify: true
+        },
+        showCloseImage: {
+          type: Boolean,
+          value: false,
+          reflectToAttribute: true
         },
         showImageNav: {
           type: Boolean,
